--- a/seventeen.html
+++ b/seventeen.html
@@ -1,125 +1,100 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
-
+<html lang="zh">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SEVENTEEN介绍</title>
+    <title>Seventeen 介绍</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
+            background-color: #f8f9fa;
             margin: 0;
             padding: 0;
         }
-
         header {
-            background-color: #222;
+            background-color: #ff5c8d;
             color: white;
             text-align: center;
             padding: 20px;
+            font-size: 24px;
         }
-
-        nav {
-            background-color: #333;
-            color: white;
+        .container {
+            width: 80%;
+            margin: 20px auto;
         }
-
-        nav ul {
-            list-style-type: none;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-        }
-
-        nav ul li {
-            margin: 0 15px;
-        }
-
-        nav ul li a {
-            color: white;
-            text-decoration: none;
-        }
-
-        section {
+        .section {
+            background: white;
             padding: 20px;
+            margin: 10px 0;
+            border-radius: 8px;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
         }
-
-        h2 {
-            color: #333;
-        }
-
-        p {
-            color: #666;
-        }
-
-      .member-list {
+        .members {
             display: flex;
             flex-wrap: wrap;
-            justify-content: center;
+            justify-content: space-between;
         }
-
-      .member {
-            width: 200px;
-            margin: 20px;
-            text-align: center;
-            background-color: white;
+        .member {
+            width: 30%;
+            background: #ffe4e1;
             padding: 15px;
-            border-radius: 5px;
-            box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+            margin: 10px 0;
+            border-radius: 8px;
+            text-align: center;
         }
-
-      .member img {
-            width: 150px;
-            height: 150px;
-            object-fit: cover;
-            border-radius: 50%;
-        }
-
-      .song-list {
+        .songs ul {
             list-style-type: none;
             padding: 0;
         }
-
-      .song-list li {
-            margin-bottom: 10px;
+        .songs li {
+            background: #ffdae0;
+            margin: 5px 0;
+            padding: 10px;
+            border-radius: 5px;
+            text-align: center;
         }
     </style>
 </head>
-
 <body>
-    <header>
-        <h1>SEVENTEEN介绍</h1>
-    </header>
-    <nav>
+
+<header>Seventeen 介绍</header>
+
+<div class="container">
+    <div class="section">
+        <h2>关于 Seventeen</h2>
+        <p>Seventeen 是 Pledis Entertainment 旗下的男子音乐组合，成立于 2015 年，由 13 名成员组成。Seventeen 以其自作曲能力、强大的编舞和独特的团队合作模式著称。</p>
+    </div>
+
+    <div class="section">
+        <h2>成员介绍</h2>
+        <div class="members">
+            <div class="member"><strong>S.Coups</strong>（队长、说唱）</div>
+            <div class="member"><strong>Jeonghan</strong>（主唱）</div>
+            <div class="member"><strong>Joshua</strong>（主唱）</div>
+            <div class="member"><strong>Jun</strong>（舞蹈、主唱）</div>
+            <div class="member"><strong>Hoshi</strong>（舞蹈队长）</div>
+            <div class="member"><strong>Wonwoo</strong>（说唱）</div>
+            <div class="member"><strong>Woozi</strong>（主唱、制作人）</div>
+            <div class="member"><strong>The8</strong>（舞蹈）</div>
+            <div class="member"><strong>Mingyu</strong>（说唱）</div>
+            <div class="member"><strong>DK</strong>（主唱）</div>
+            <div class="member"><strong>Seungkwan</strong>（主唱）</div>
+            <div class="member"><strong>Vernon</strong>（说唱）</div>
+            <div class="member"><strong>Dino</strong>（舞蹈）</div>
+        </div>
+    </div>
+
+    <div class="section songs">
+        <h2>著名歌曲</h2>
         <ul>
-            <li><a href="#">首页</a></li>
-            <li><a href="#members">成员介绍</a></li>
-            <li><a href="#songs">著名歌曲</a></li>
+            <li><a href="https://www.youtube.com/watch?v=9M7k9ZV67c0" target="_blank">Don't Wanna Cry</a></li>
+            <li><a href="https://www.youtube.com/watch?v=Rw8nldFzpiQ" target="_blank">Very Nice</a></li>
+            <li><a href="https://www.youtube.com/watch?v=YOEpDqECq_E" target="_blank">Home</a></li>
+            <li><a href="https://www.youtube.com/watch?v=sjG8z1fxpF0" target="_blank">HOT</a></li>
+            <li><a href="https://www.youtube.com/watch?v=WpuatuzSDK4" target="_blank">Super</a></li>
         </ul>
-    </nav>
-    <section>
-        <h2>关于SEVENTEEN</h2>
-        <p>SEVENTEEN是韩国娱乐公司Pledis Entertainment于2015年5月26日推出的13人男子偶像团体，团内设有嘻哈队（Hip-hop Team）、表演队（Performance Team）和主唱队（Vocal Team）3个分队。团名“SEVENTEEN”代表13名成员 + 3个分队 + 1个团体。</p>
-    </section>
-    <section id="members">
-        <h2>组合成员</h2>
-        <div class="member-list">
-            <div class="member">
-                <img src="崔胜澈图片链接" alt="崔胜澈（S.COUPS）">
-                <h3>崔胜澈（S.COUPS）</h3>
-                <p>总队长及Hip-hop Team队长</p>
-            </div>
-            <div class="member">
-                <img src="尹净汉图片链接" alt="尹净汉（JEONGHAN）">
-                <h3>尹净汉（JEONGHAN）</h3>
-                <p>团队成员</p>
-            </div>
-            <div class="member">
-                <img src="洪知秀图片链接" alt="洪知秀（JOSHUA）">
-                <h3>洪知秀（JOSHUA）</h3>
-                <p>美籍韩裔成员</p>
-            </div>
-            <div class="member">
-                <img src="文俊辉图片链接" alt="文俊辉
+    </div>
+</div>
+
+</body>
+</html>
