--- a/57777.html
+++ b/57777.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>减肥真的好饿啊啊啊啊啊想把所有人都吃了</title>
+<title>减肥真的好饿</title>
 </head>
 <body>
-<h1>明天吃什么呢明天早餐吃麦满分然后中午吃60g玉米吃完去游泳游完泳回来吃香蕉当快碳再吃一个去皮鸡腿补充优质蛋白质好了</h1>
-<p>Tonight I swapped some of the songs I wrote with some friends, who
-gave me some of the songs they wrote. I love sharing my music.</p>
+<h1>啊啊啊啊啊想把所有人都吃了</h1>
+<p>明天吃什么呢明天早餐吃麦满分然后中午吃60g玉米
+  吃完去游泳
+  游完泳回来吃香蕉当快碳
+  再吃一个去皮鸡腿补充优质蛋白质好了.</p>
 </body>
 </html>
