--- a/57777.html
+++ b/57777.html
@@ -5,9 +5,7 @@
 </head>
 <body>
 <h1>啊啊啊啊啊想把所有人都吃了</h1>
-<p>明天吃什么呢明天早餐吃麦满分然后中午吃60g玉米
-  吃完去游泳
-  游完泳回来吃香蕉当快碳
-  再吃一个去皮鸡腿补充优质蛋白质好了.</p>
+<img src="1.png"/>
+<p>明天吃什么呢明天早餐吃麦满分然后中午吃60g玉米吃完去游泳游完泳回来吃香蕉当快碳再吃一个去皮鸡腿补充优质蛋白质好了</p>
 </body>
 </html>
