--- a/jisuanqi.html
+++ b/jisuanqi.html
@@ -45,6 +45,24 @@
        .calculator button:hover {
             background-color: #ddd;
         }
+
+       .calculator div:nth-child(1) button:nth-child(1) { background-color: red; }
+       .calculator div:nth-child(1) button:nth-child(2) { background-color: orange; }
+       .calculator div:nth-child(1) button:nth-child(3) { background-color: yellow; }
+       .calculator div:nth-child(1) button:nth-child(4) { background-color: green; }
+       .calculator div:nth-child(2) button:nth-child(1) { background-color: blue; }
+       .calculator div:nth-child(2) button:nth-child(2) { background-color: indigo; }
+       .calculator div:nth-child(2) button:nth-child(3) { background-color: violet; }
+       .calculator div:nth-child(2) button:nth-child(4) { background-color: red; }
+       .calculator div:nth-child(3) button:nth-child(1) { background-color: orange; }
+       .calculator div:nth-child(3) button:nth-child(2) { background-color: yellow; }
+       .calculator div:nth-child(3) button:nth-child(3) { background-color: green; }
+       .calculator div:nth-child(3) button:nth-child(4) { background-color: blue; }
+       .calculator div:nth-child(4) button:nth-child(1) { background-color: indigo; }
+       .calculator div:nth-child(4) button:nth-child(2) { background-color: violet; }
+       .calculator div:nth-child(4) button:nth-child(3) { background-color: red; }
+       .calculator div:nth-child(4) button:nth-child(4) { background-color: orange; }
+       .calculator button:last-child { background-color: yellow; }
     </style>
 </head>
 
