Update and rename jisuanqi.html to jsq.html

--- a/jsq.html
+++ b/jsq.html
@@ -63,6 +63,25 @@
        .calculator div:nth-child(4) button:nth-child(3) { background-color: red; }
        .calculator div:nth-child(4) button:nth-child(4) { background-color: orange; }
        .calculator button:last-child { background-color: yellow; }
+
+       /* 按下按钮时的颜色变化 */
+       .calculator div:nth-child(1) button:nth-child(1):active { background-color: darkred; }
+       .calculator div:nth-child(1) button:nth-child(2):active { background-color: darkorange; }
+       .calculator div:nth-child(1) button:nth-child(3):active { background-color: darkkhaki; }
+       .calculator div:nth-child(1) button:nth-child(4):active { background-color: darkgreen; }
+       .calculator div:nth-child(2) button:nth-child(1):active { background-color: darkblue; }
+       .calculator div:nth-child(2) button:nth-child(2):active { background-color: darkslateblue; }
+       .calculator div:nth-child(2) button:nth-child(3):active { background-color: darkviolet; }
+       .calculator div:nth-child(2) button:nth-child(4):active { background-color: darkred; }
+       .calculator div:nth-child(3) button:nth-child(1):active { background-color: darkorange; }
+       .calculator div:nth-child(3) button:nth-child(2):active { background-color: darkkhaki; }
+       .calculator div:nth-child(3) button:nth-child(3):active { background-color: darkgreen; }
+       .calculator div:nth-child(3) button:nth-child(4):active { background-color: darkblue; }
+       .calculator div:nth-child(4) button:nth-child(1):active { background-color: darkslateblue; }
+       .calculator div:nth-child(4) button:nth-child(2):active { background-color: darkviolet; }
+       .calculator div:nth-child(4) button:nth-child(3):active { background-color: darkred; }
+       .calculator div:nth-child(4) button:nth-child(4):active { background-color: darkorange; }
+       .calculator button:last-child:active { background-color: darkkhaki; }
     </style>
 </head>
 
