Update and rename jieke2.html to jieke3.html

--- a/jieke3.html
+++ b/jieke3.html
@@ -2,7 +2,7 @@
 <html lang="zh">
 <head>
   <meta charset="UTF-8" />
-  <title>央视频AI微短剧 可视化研究</title>
+  <title>央视频AI微短剧传播效果研究</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -66,21 +66,20 @@
       <!-- 📘 背景 -->
       <div id="section1" class="hidden text-gray-800 space-y-3">
         <h2 class="text-2xl font-semibold text-blue-800">研究背景</h2>
-        <p>随着AI技术赋能媒体内容创作，文化类AI微短剧成为主流媒体探索“讲好中国故事”的重要方式。</p>
-        <p>央视频借助人工智能制作《美猴王》《中国神话》等系列作品，传播中华文化，也引发了用户大量互动与评价。</p>
-        <p>本研究聚焦这些微短剧在社交平台上的传播效果，尤其是用户弹幕中的舆情特征与接受度表现。</p>
+        <p>近年来，随着人工智能（AI）技术的飞速发展，全球媒体产业正在经历一场深刻的内容生产与传播方式的转型。AI不仅在商业、医疗等领域中展现出巨大的潜力，在文化传播方面同样扮演着重要角色。尤其在中国，主流媒体积极响应“讲好中国故事”的时代号召，探索如何借助AI技术实现中华优秀传统文化的创造性转化和创新性表达。</p>
+        <p>央视频作为中央广播电视总台旗下的重要新媒体平台，近年来推出了多个融合AI的文化类微短剧项目，包括《AI美猴王》《AI中国神话》等。这些作品通过AI建模、动态捕捉与视觉生成技术，将传统神话故事以新的形式呈现给年轻用户群体，形成了一种“科技赋能叙事”的独特传播形态。与此同时，这些作品也在哔哩哔哩等社交视频平台上引发了大量用户参与和互动，弹幕评论、转发讨论等构建起一个以“文化再生产”为核心的受众参与场域。</p>
+        <p>研究者开始关注这一现象背后的传播机制与社会心理基础。一方面，AI微短剧作为一种融合技术、叙事与文化的产物，其内容的接受度直接影响到文化价值的传递成效；另一方面，用户在观看过程中的行为数据（如评论情绪、关键词高频率）则为我们理解当代青少年如何理解传统文化提供了重要线索。因此，本研究旨在通过对央视频AI微短剧在平台传播过程中的数据分析，系统地揭示AI叙事形式对观众认知、情感与文化认同的影响路径。</p>
+        <p>通过这一研究，我们希望能够从理论与实证两个层面，对“AI叙事”在中国主流文化传播中的应用机制进行深入解析，为未来主流媒体的AI内容创新与文化价值传达提供经验基础与理论指导。</p>
       </div>
 
       <!-- 🧠 方法 -->
       <div id="section2" class="hidden text-gray-800 space-y-3">
-        <h2 class="text-2xl font-semibold text-purple-800">研究方法与数据来源</h2>
-        <p>研究团队使用Python爬虫抓取B站弹幕，并进行中文分词与数据清洗。</p>
-        <ul class="list-disc list-inside">
-          <li>📌 情感分析：判别弹幕正负面评价比重</li>
-          <li>📌 LDA主题建模：识别用户讨论核心主题</li>
-          <li>📌 TF-IDF关键词提取：发现热议关键词及其权重</li>
-        </ul>
-        <p>所有分析结果可视化呈现在下方图表区域。</p>
+        <h2 class="text-2xl font-semibold text-purple-800">方法与数据来源</h2>
+        <p>本研究采用“计算传播”方法体系，结合内容采集、文本分析、情感识别与主题建模等手段，对央视频发布的AI文化类微短剧进行结构化解析。具体来说，我们主要围绕两个作品系列——《AI美猴王》和《AI中国神话》，在B站平台上爬取了其所有弹幕内容，共获得有效文本样本超过3万条。</p>
+        <p>数据处理过程包括以下步骤：首先，使用Python爬虫库（如requests、selenium）对目标视频的弹幕进行定向采集，并统一转换为标准UTF-8格式文本；其次，利用`jieba`中文分词工具对原始文本进行分词处理，并通过停用词表进行噪声清洗，形成可用于后续建模的语料库。</p>
+        <p>在建模分析方面，我们引入了三种主流技术：第一，使用LDA（Latent Dirichlet Allocation）主题建模算法，提取弹幕中潜在的7个主题，探测用户关注点的聚类分布；第二，采用基于词典匹配和深度学习模型结合的情感分析方法，对每条弹幕打分，计算积极、中性、消极情绪所占比例；第三，运用TF-IDF（词频-逆文档频率）算法提取关键词，衡量用户讨论的高频重点内容。</p>
+        <p>此外，我们还设计了一个用户问卷调查，重点考察受众对AI文化微短剧的接受程度、文化认知变化以及对国家形象的认同态度。通过Likert量表对观众态度进行量化，使用SPSS软件进行回归分析、T检验等统计方法，以确保研究结果具备可靠性与代表性。</p>
+        <p>通过这些定量与定性方法的结合，我们不仅获得了用户对AI文化内容的接受偏好，也能够在情感与叙事维度上刻画AI微短剧的传播效应，为AI技术在主流文化输出中发挥作用提供了可观测的实证支持。</p>
       </div>
 
       <!-- 📊 图表 -->
@@ -102,7 +101,7 @@
     </div>
   </div>
 
-  <!-- 🎨 Tailwind 自定义样式 -->
+  <!-- 🎨 样式 -->
   <style>
     .btn {
       @apply bg-blue-600 text-white px-5 py-2 rounded hover:bg-blue-700 transition;
@@ -113,7 +112,7 @@
     }
   </style>
 
-  <!-- 📜 JS 控制逻辑 -->
+  <!-- 📜 脚本 -->
   <script>
     function enterSite() {
       document.getElementById('cover').classList.add('hidden');
@@ -178,5 +177,6 @@
       }
     });
   </script>
+
 </body>
 </html>
